--- a/.github/workflows/chocomilk.yml
+++ b/.github/workflows/chocomilk.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           playbook: chocomilk/play.yml
           inventory: chocomilk/inventory/hosts.yml
+          verbose: 4
         env:
           ANSIBLE_HOST_KEY_CHECKING: "false"
           ANSIBLE_DEPRECATION_WARNINGS: "false"
