--- a/.github/workflows/chocomilk.yml
+++ b/.github/workflows/chocomilk.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           path: package
 
+      - uses: actions/setup-python@v1
+
       - name: Play Ansible Playbook
         run: ansible-playbook -i inventory/hosts.yml -vvv before.yml
         env:
