--- a/.github/workflows/chocomilk.yml
+++ b/.github/workflows/chocomilk.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-python@v1
 
       - name: Play Ansible Playbook
-        run: ansible-playbook -i inventory/hosts.yml -vv before.yml
+        run: ansible-playbook -i inventory/hosts.yml before.yml
         env:
           ANSIBLE_HOST_KEY_CHECKING: "false"
           ANSIBLE_DEPRECATION_WARNINGS: "false"
@@ -33,7 +33,7 @@ jobs:
           PWD: .
 
       - name: Play Ansible Playbook
-        run: ansible-playbook -i inventory/hosts.yml play.yml
+        run: ansible-playbook -i inventory/hosts.yml -vvvv play.yml
         env:
           ANSIBLE_HOST_KEY_CHECKING: "false"
           ANSIBLE_DEPRECATION_WARNINGS: "false"
